--- a/spring-ai-alibaba-translate-example/src/main/resources/application.yml
+++ b/spring-ai-alibaba-translate-example/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
         options:
           model: ${OLLAMA_MODEL}
     dashscope:
-      api-key: ${AI_DASHSCOPE_API_KEY:your_api_key_here}
+      api-key: sk-6b76c9f5936a4a5d8facb6daa5cd3b58
 
 server:
   port: 8080
