--- a/spring-ai-alibaba-nacos-example/src/main/resources/application.yml
+++ b/spring-ai-alibaba-nacos-example/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
         template:
           enabled: true
 
-    openai:
+    dashscope:
       base-url: https://dashscope.aliyuncs.com/compatible-mode
       api-key: ${AI_DASHSCOPE_API_KEY}
       chat:
