chore: remove sensitive credentials from config file

--- a/spring-ai-alibaba-tool-calling-example/src/main/resources/application.yml
+++ b/spring-ai-alibaba-tool-calling-example/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
         baidu:
           map:
-            apiKey: 8j3In53BNTJGesDAqRZvVlkDJ0VayzK7
+            apiKey: ${BAIDU_MAP_API_KEY}
 
     dashscope:
-      api-key: sk-6b76c9f5936a4a5d8facb6daa5cd3b58
+      api-key: ${AI_DASHSCOPE_API_KEY}
