style: 添加空行、修改pom依赖版本以及lecense日期

--- a/spring-ai-alibaba-tool-calling-example/pom.xml
+++ b/spring-ai-alibaba-tool-calling-example/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.alibaba.cloud.ai</groupId>
             <artifactId>spring-ai-alibaba-starter-tool-calling-baidumap</artifactId>
-            <version>1.0.0-M6.2-SNAPSHOT</version>
+            <version>${spring-ai-alibaba.version}</version>
         </dependency>
 
     </dependencies>
