--- a/spring-ai-alibaba-mcp-example/spring-ai-alibaba-mcp-starter-example/client/mcp-streamable-client-example/src/main/resources/application.yml
+++ b/spring-ai-alibaba-mcp-example/spring-ai-alibaba-mcp-starter-example/client/mcp-streamable-client-example/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     web-application-type: reactive
   ai:
     openai:
-      api-key: sk-LwAUCbjFdDHuaQ3gUNhzioBLSlP5Qq6ixa1nIkTf6Sqw7BSJ
+      api-key:
       base-url: https://api.chatanywhere.tech
       chat:
         options:
